--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-   <link rel="stylesheet" href="iview.css">
-   <link rel="stylesheet" href="app.css">
+   <link rel="stylesheet" href="./styles/iview.css">
+   <link rel="stylesheet" href="./styles/app.css">
   </head>
   <body>
     <div id="app"></div>
